--- a/package.json
+++ b/package.json
@@ -24,31 +24,31 @@
     "url": "https://github.com/collab-ui/collab-ui-react/issues"
   },
   "scripts": {
-    "build:markdown": "babel-node ./tools/markdownToHTML.js",
-    "build:data": "babel-node ./tools/docCreate.js",
-    "build:examples": "babel-node ./tools/exampleCreate.js",
-    "build:lib": "BABEL_ENV=lib babel-node tools/lib/build.js",
-    "build:docs": "BABEL_ENV=production babel-node tools/website/build.js",
+    "build:markdown": "node ./tools/markdownToHTML.js",
+    "build:data": "node ./tools/docCreate.js",
+    "build:examples": "node ./tools/exampleCreate.js",
+    "build:lib": "BABEL_ENV=lib node ./tools/lib/build.js",
+    "build:docs": "BABEL_ENV=production node tools/website/build.js",
     "build": "run-s build:data build:examples build:lib build:markdown build:docs open:dist",
     "start": "run-p test:watch open:src lint:watch",
-    "analyze-bundle": "babel-node ./tools/analyzeBundle.js",
+    "analyze-bundle": "node ./tools/analyzeBundle.js",
     "clean:install": "rimraf node_modules && npm install",
     "clean:update": "rimraf node_modules && npm cache verify && npm install && npm update",
     "clean-dist": "npm run remove-dist && mkdir dist bundles lib",
     "lint": "esw webpack.config.* src config --color",
     "lint:watch": "npm run lint -- --watch",
     "open:cover": "npm run test:cover && opn ./coverage/lcov-report/index.html",
-    "open:src": "babel-node config/srcServer.js",
-    "open:dist": "babel-node config/distServer.js",
+    "open:src": "node config/srcServer.js",
+    "open:dist": "node config/distServer.js",
     "prebuild": "npm run clean-dist && npm run lint && npm run test",
     "prepublishOnly": "npm run build:lib",
     "prestart": "run-s start-message build:data build:examples",
     "release": "release",
     "remove-dist": "rimraf ./dist ./bundles ./lib",
-    "start-message": "babel-node config/startMessage.js",
+    "start-message": "node config/startMessage.js",
     "test": "jest",
     "test:cover": "npm run test -- --coverage ",
-    "test:CI": "babel-node config/testCi.js",
+    "test:CI": "node config/testCi.js",
     "test:cover:CI": "npm run test:CI -- --coverage && cat ./coverage/lcov.info | node_modules/coveralls/bin/coveralls.js",
     "test:watch": "npm run test -- --watch",
     "watch:docs": "npm-watch",
@@ -85,6 +85,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-export-default": "^7.0.0-alpha.20",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-react-constant-elements": "6.23.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
