--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
   "jsnext:main": "lib/index.js",
   "module": "lib/index.js",
   "dependencies": {
-    "@collab-ui/core": "^10.4.0",
-    "babel-runtime": "^6.26.0",
+    "@babel/runtime": "^7.0.0-beta.47",
+    "@collab-ui/core": "^10.3.0",
     "moment": "^2.22.0",
     "object-assign": "4.1.1",
     "react-aria-modal": "^2.11.1"
@@ -74,33 +74,31 @@
     "react-dom": ">=15.6.2 || >=16.0.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.47",
+    "@babel/core": "^7.0.0-beta.47",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.47",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.47",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0-beta.47",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.47",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.47",
+    "@babel/preset-env": "^7.0.0-beta.47",
+    "@babel/preset-react": "^7.0.0-beta.47",
+    "@babel/preset-stage-0": "^7.0.0-beta.47",
     "@collab-ui/release": "^2.0.1",
     "@collab-ui/utils": "^2.0.1",
     "autoprefixer": "^7.2.4",
-    "babel-cli": "6.26.0",
-    "babel-core": "6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.4.4",
-    "babel-loader": "7.1.2",
+    "babel-jest": "^22.4.3",
+    "babel-loader": "^8.0.0-beta.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-export-default": "^7.0.0-alpha.20",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-react-constant-elements": "6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.12",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "2.23.5",
     "chalk": "^2.3.0",
     "child-process-promise": "^2.2.1",
-    "classnames": "2.2.5",
     "connect-history-api-fallback": "^1.4.0",
-    "copy-webpack-plugin": "^4.3.1",
     "coveralls": "^3.0.1",
     "css-loader": "0.28.8",
     "enzyme": "^3.3.0",
@@ -119,13 +117,10 @@
     "history": "4.7.2",
     "html-webpack-plugin": "2.30.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "^22.4.4",
-    "jest-cli": "^22.4.4",
-    "json-loader": "0.5.7",
+    "jest": "^22.4.3",
+    "jest-cli": "^22.4.3",
     "lodash": "^4.17.4",
-    "mockdate": "2.0.2",
-    "moment-timezone": "^0.5.17",
-    "node-sass": "^4.8.3",
+    "moment-timezone": "^0.5.14",
     "npm-run-all": "^4.1.2",
     "npm-watch": "^0.3.0",
     "opn-cli": "3.1.0",
@@ -135,14 +130,12 @@
     "prompt": "1.0.0",
     "prop-types": "15.6.0",
     "react": "15.6.2",
-    "react-addons-test-utils": "15.6.2",
     "react-dom": "15.6.2",
-    "react-hot-loader": "^3.1.1",
+    "react-hot-loader": "^4.2.0",
     "react-redux": "5.0.6",
     "react-router-dom": "4.2.2",
     "react-router-redux": "4.0.8",
     "react-test-renderer": "15.6.2",
-    "react-transition-group": "^2.3.0",
     "redux": "3.7.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "2.2.0",
@@ -151,7 +144,6 @@
     "sass-loader": "6.0.6",
     "showdown": "^1.8.5",
     "style-loader": "^0.19.1",
-    "svgxuse": "^1.2.6",
     "url-loader": "^0.6.2",
     "webpack": "^3.12.0",
     "webpack-bundle-analyzer": "2.9.2",
