chore(es): created ES module directory and cleaned scripts

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "build:markdown": "node ./tools/markdownToHTML.js",
     "build:data": "node ./tools/docCreate.js",
     "build:examples": "node ./tools/exampleCreate.js",
-    "build:lib": "BABEL_ENV=lib node ./tools/lib/build.js",
-    "build:docs": "BABEL_ENV=production node tools/website/build.js",
+    "build:lib": "node ./tools/lib/build.js",
+    "build:docs": "node ./tools/website/build.js",
     "build": "run-s build:data build:examples build:lib build:markdown build:docs open:dist",
     "start": "run-p test:watch open:src lint:watch",
     "analyze-bundle": "node ./tools/analyzeBundle.js",
@@ -60,8 +60,7 @@
     "build:lib": "src/lib/**/*.js"
   },
   "main": "lib/index.js",
-  "jsnext:main": "lib/index.js",
-  "module": "lib/index.js",
+  "module": "es/index.js",
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.47",
     "@collab-ui/core": "^10.3.0",
@@ -79,7 +78,7 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0-beta.47",
     "@babel/plugin-proposal-export-default-from": "^7.0.0-beta.47",
     "@babel/plugin-proposal-export-namespace-from": "^7.0.0-beta.47",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.47",
+    "@babel/plugin-transform-react-constant-elements": "^7.0.0-beta.49",
     "@babel/plugin-transform-runtime": "^7.0.0-beta.47",
     "@babel/preset-env": "^7.0.0-beta.47",
     "@babel/preset-react": "^7.0.0-beta.47",
@@ -92,6 +91,7 @@
     "babel-jest": "^22.4.3",
     "babel-loader": "^8.0.0-beta.3",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-polyfill": "6.26.0",
